ive added todays lab 25/3

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             Restaurant
         </title>
     </head>
+    <script src="javascript/app.js"></script>
     <body>
         <header>
             <h1>Shawarma Space</h1>
@@ -14,6 +15,7 @@
                     <li><a href=" ">Menu</a></li>
                     <li><a href=" ">My Account</a></li>
                     <li><a href=" ">Support</a></li>
+                    <li><a href=" "><script src="javascript/app1.js"></script></a></li>
                 </ul>
             </nav>
         </header>
@@ -33,6 +35,6 @@
             <p>
                 &copy;Shawarma Rights 2021
             </p>
-        </footer>
+        </footer>        
     </body>
 </html>
